--- a/SyncArea/SyncArea/Components/Pages/Home.razor
+++ b/SyncArea/SyncArea/Components/Pages/Home.razor
@@ -29,7 +29,7 @@
                                     <MudText>创建时间: @workspace.CreatedAt.ToString("yyyy-MM-dd")</MudText>
                                 </MudCardContent>
                                 <MudCardActions>
-                                    <MudButton Variant="Variant.Text" Color="Color.Primary" OnClick="() => NavigateToWorkspace(workspace.Id)">进入</MudButton>
+                                    <MudButton Class="ml-auto" Variant="Variant.Text" Color="Color.Primary" OnClick="() => NavigateToWorkspace(workspace.Id)">进入</MudButton>
                                 </MudCardActions>
                             </MudCard>
                         </MudItem>
