--- a/SyncArea/SyncArea/Components/Layout/MainLayout.razor
+++ b/SyncArea/SyncArea/Components/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
-﻿@inherits LayoutComponentBase
+﻿@using Microsoft.AspNetCore.Components.Authorization
+@inherits LayoutComponentBase
 @inject UserCRUDService UserCRUDService
 <MudThemeProvider Theme="@_theme" IsDarkMode="_isDarkMode" />
 <MudPopoverProvider />
@@ -15,7 +16,12 @@
         <MudSpacer />
 
         <MudIconButton Icon="@(DarkLightModeButtonIcon)" Color="Color.Inherit" OnClick="@DarkModeToggle" />
-        <MudIconButton Icon="@Icons.Material.Outlined.AccountCircle" Edge="Edge.End" Color="Color.Primary" Href="/AccountSettingPage" />
+        <AuthorizeView>
+        <Authorized>
+            <MudIconButton Icon="@Icons.Material.Outlined.AccountCircle" Edge="Edge.End" Color="Color.Primary" Href="/AccountSettingPage" />
+        </Authorized>
+        </AuthorizeView>
+
     </MudAppBar>
     @if(UserCRUDService.isAdmin)
     {
