--- a/SyncArea/SyncArea/Components/Pages/DisplayWorkItem.razor
+++ b/SyncArea/SyncArea/Components/Pages/DisplayWorkItem.razor
@@ -1,51 +1,70 @@
-﻿<div id="container" style="max-height:80vh;overflow:auto">
-    <MudPaper Outlined Class="pa-4">
+﻿@using SyncArea.Components.Pages.Admin
+@inject IDialogService DialogService
+<div id="container" style="max-height:80vh;overflow:auto">
 
-    <MudXOutline ScrollContainerSelector="#container" >
-        @if(GroupedWorkItems!=null)
-        {
-        foreach (var group in GroupedWorkItems)
-        {
-            var date = group.Key.Date.ToString("yyyy-MM-dd");
-            <MudXOutlineSection Title="@date">
-                <MudExpansionPanels Outlined>
-                    <MudExpansionPanel Text="@date">
-                        <MudPaper Outlined >
-
-                            @foreach (var item in group)
-                            {
-                                <MudText>创建者: @item.Username</MudText>
-                                <MudText>备注: @(item.Remark ?? "无")</MudText>
-                                <MudText>图片数: @item.PhotoCount</MudText>
-                                @if (item.PhotoPreviews.Any())
-                                {
-                                    <MudGrid Class="mt-2">
-                                        @foreach (var preview in item.PhotoPreviews)
+        <MudXOutline ScrollContainerSelector="#container" >
+            @if(GroupedWorkItems!=null)
+            {
+                foreach (var group in GroupedWorkItems)
+                {
+                    var date = group.Key.Date.ToString("yyyy-MM-dd");
+                    <MudXOutlineSection Title="@date">
+                        <MudExpansionPanels Outlined Gutters=false>
+                            <MudExpansionPanel Text="@date" HeaderClass="pa-2" Gutters=false>
+                                <MudPaper Outlined  Class="pa-2">
+                                    @foreach (var item in group)
+                                    {   
+                                        <MudText>创建者: @item.Username</MudText>
+                                        <MudText>备注: @(item.Remark ?? "无")</MudText>
+                                        <MudText>图片数: @item.PhotoCount</MudText>
+                                        @if (item.PhotoPreviews.Any())
                                         {
-                                            <MudItem xs="6" sm="4">
-                                                <MudImage Src="@($"data:image/jpeg;base64,{preview}")" Alt="照片" Width="100" Height="100" ObjectFit="ObjectFit.Cover" />
-                                            </MudItem>
+                                            <MudGrid Class="mt-2">
+                                                @foreach (var preview in item.PhotoPreviews)
+                                                {
+                                                    var img = $"data:image/jpeg;base64,{preview}";
+                                                    <MudItem xs="6" sm="4" md="3">
+                                                        <MudButton OnClick="@(()=>LookImage(img))">
+                                                        <MudImage  ObjectPosition=ObjectPosition.Center Style="aspect-ratio:1" Src="@img" Alt="照片" Fluid ObjectFit="ObjectFit.Cover" />
+                                                        </MudButton>
+                                                    </MudItem>
+                                                }
+                                            </MudGrid>
                                         }
-                                    </MudGrid>
-                                }
-                                else
-                                {
-                                    <MudText Color="Color.Info">无照片</MudText>
-                                }
-                                <MudDivider></MudDivider>
-                            }
-                        </MudPaper>
-                    </MudExpansionPanel>
-                </MudExpansionPanels>
-                <br />
-            </MudXOutlineSection>
-        }
-        }
-    </MudXOutline>
-    </MudPaper>
+                                        else
+                                        {
+                                            <MudText Color="Color.Info">无照片</MudText>
+                                        }
+                                        <br />
+                                        <MudDivider ></MudDivider>
+                                    }
+                                </MudPaper>
+                            </MudExpansionPanel>
+                        </MudExpansionPanels>
+                        <br />
+                    </MudXOutlineSection>
+                }
+            }
+        </MudXOutline>
 
 </div>
 @code{
     [Parameter]
     public IEnumerable<IGrouping<DateTime, WorkItemDto>>? GroupedWorkItems{ get; set; }
+
+    private async Task LookImage(string url)
+    {
+        var options = new DialogOptions
+            {
+                CloseButton = false,
+                MaxWidth = MaxWidth.ExtraLarge,
+                 NoHeader=true,
+                  BackdropClick=true
+            };
+        var parameters= new DialogParameters<LookImage>
+            {
+                { "Url", url }
+            };
+        await DialogService.ShowAsync<LookImage>("查看图片",parameters,options);
+    }
 }
