--- a/SyncArea/SyncArea/Components/App.razor
+++ b/SyncArea/SyncArea/Components/App.razor
@@ -19,6 +19,7 @@
     <script src="./_content/Blazor.QrCodeGen/qrcode.min.js"></script>
     <script type="module" src="./_content/Blazor.QrCodeGen/qrcodeInterop.js"></script>
     <script src=@Assets["_content/MudBlazor/MudBlazor.min.js"]></script>
+    <script src="lazyload.js"></script>
 </body>
 
 </html>
