--- a/SyncArea/SyncArea/Components/App.razor
+++ b/SyncArea/SyncArea/Components/App.razor
@@ -20,6 +20,7 @@
     <script type="module" src="./_content/Blazor.QrCodeGen/qrcodeInterop.js"></script>
     <script src=@Assets["_content/MudBlazor/MudBlazor.min.js"]></script>
     <script src="lazyload.js"></script>
+    <script src="photoService.js"></script>
 </body>
 
 </html>
