--- a/SyncArea/SyncArea/Components/Layout/MainLayout.razor
+++ b/SyncArea/SyncArea/Components/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Authorization
+@using SyncArea.Pages.Account
 @inherits LayoutComponentBase
 @inject UserCRUDService UserCRUDService
 <MudThemeProvider Theme="@_theme" IsDarkMode="_isDarkMode" />
