--- a/SyncArea/SyncArea/Components/Layout/NavMenu.razor
+++ b/SyncArea/SyncArea/Components/Layout/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿@inject UserCRUDService UserCRUDService
+﻿@using SyncArea.Pages.Account
+@inject UserCRUDService UserCRUDService
 <MudNavMenu>
     <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">工作区</MudNavLink>
     <MudNavLink Href="/admin" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.ManageAccounts">后台管理</MudNavLink>
