--- a/SyncArea/SyncArea/Components/Pages/AccountSettingPage.razor
+++ b/SyncArea/SyncArea/Components/Pages/AccountSettingPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/AccountSettingPage"
+@using SyncArea.Pages.Account
 @inject UserCRUDService UserCRUDService
 @inject ISnackbar SnackBar
 @attribute [Authorize]
