--- a/SyncArea/SyncArea/Components/Pages/Home.razor
+++ b/SyncArea/SyncArea/Components/Pages/Home.razor
@@ -3,6 +3,7 @@
 @attribute [Authorize]
 @using Microsoft.AspNetCore.Authorization
 @using SyncArea.Identity.Models
+@using SyncArea.Pages.Account
 @using SyncArea.Services
 @inject UserService UserService
 @inject UserCRUDService UserCRUDService
