--- a/SyncArea/SyncArea/Components/IdentityPage/Login.razor
+++ b/SyncArea/SyncArea/Components/IdentityPage/Login.razor
@@ -1,6 +1,7 @@
 ﻿@page "/login"
 @using Microsoft.AspNetCore.WebUtilities
 @using SyncArea.Identity.Models
+@using SyncArea.Pages.Account
 @inject NavigationManager Navigation
 @inject UserManager<ApplicationUser> UserManager
 @inject ISnackbar Snackbar
