--- a/SyncArea/SyncArea/Components/Pages/JoinWorkspaceDialog.razor
+++ b/SyncArea/SyncArea/Components/Pages/JoinWorkspaceDialog.razor
@@ -1,4 +1,5 @@
-﻿@using SyncArea.Services
+﻿@using SyncArea.Pages.Account
+@using SyncArea.Services
 @inject UserService UserService
 @inject ISnackbar Snackbar
 @inject UserCRUDService UserCRUDService
